--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-dynamic-swiper": "^2.0.0",
+    "react-intl": "^2.7.2",
     "react-scripts": "2.1.1"
   },
   "scripts": {
